[package]
name = "brain_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
image = "0.24"     # 核心图像处理库 (用于生成九宫格)
base64 = "0.21"    # 将内存中的图片转为 Base64
calamine = "0.22"
